--- a/style.css
+++ b/style.css
@@ -1,53 +1,53 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.info {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.info__img {
   width: 100%;
 }
-.aaa .more_inf {
+.info__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa { 
+  .info { 
     text-align: center;
   }
 }
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.add-task__input {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.add-task__wrapper {
   display: flex;
 }
-ul {
+.tasks {
   margin: 0;
   padding: 0px;
 }
-li, 
-h3 {
+.tasks__item, 
+.text-h3 {
   list-style: none;
 }
-input,
-button{
+.input,
+.button{
   outline: none;
 }
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -56,12 +56,12 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.text-h3,
+.add-task__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -70,7 +70,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -82,21 +82,21 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.add-task__label {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+.add-task__input {
   width: 318px;
 }
 
 /* Task list */
-li {
+.tasks__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -108,43 +108,48 @@ li > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.tasks__checkbox {
   margin: 0 10px;
 }
-li > label {
+
+.tasks__label{
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.task__input{
   width: 226px;
 }
-button.delete img {
+.tasks__button-icon  {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.completed-tasks__button-icon  {
+  height: 2em;
+  transform: rotateZ(45deg);
+  transition: transform 200ms ease-in;
+}
+.tasks__button-icon:hover {
   transform: rotateZ(0);
 }
-
 /* Completed */
-ul#completed-tasks label {
+.task__label--completed {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task__input--hidden {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+.task__input--edit-mode {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.task__label--edit-mode {
   display: none;
 }
